Created floating navbar w/ variable scroll threshold and opacity using JS. Also, created a global JS resource file and linked it to documents.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M. Lucero's WebDev Portfolio</title>
     <link rel="stylesheet" href="style/index.css">
+    <script src="js/index.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Open-Source Cormorant Garamond Font Designed by Christian Thalmann.
     See Open Font License for details: https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL -->
@@ -15,17 +16,19 @@
 <header>
         <h1>Manuel Lucero</h1>
         <nav>
-            <div class="navItem">
-                <a id="currentPage" href="index.html">Home</a>
-            </div>
-            <div class="navItem">
-                <a href="about.html">About</a>
-            </div>
-            <div class="navItem">
-                <a href="projects.html">Projects</a>
-            </div>
-            <div class="navItem">
-                <a href="contact.html">Contact</a>
+            <div class="links">
+                <div class="navItem">
+                    <a id="currentPage" href="index.html">Home</a>
+                </div>
+                <div class="navItem">
+                    <a href="about.html">About</a>
+                </div>
+                <div class="navItem">
+                    <a href="projects.html">Projects</a>
+                </div>
+                <div class="navItem">
+                    <a href="contact.html">Contact</a>
+                </div>
             </div>
         </nav>
     <br>
